src/objects/EmailToCaseMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Map incoming emails to queue and brand</description>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBTY_Email__c</fullName>
        <label>NBTY Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <label>Queue</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType_Dev_Name__c</fullName>
        <label>RecordType Dev Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>EmailToCaseMapping</label>
</CustomObject>